tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__DeckofCards-AAAAAAAAAAAAAAAAAAAJ6w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2539,
  "prerequisites": [
    183
  ],
  "properties": {
    "auto_claim": false,
    "desc": "These cards add additional functionality to certain devices or fixtures. They specify what devices they work on in the tooltip.\n\n§6Redstone Card: §r\n\nThe Redstone Card adds redstone interactivity to the devices it can be used on, with the following options: \n\n§cAlways active\nActive with redstone signal\nActive without redstone signal\nActivate once per pulse§r\n\n§6Capacity Card: §r\n\nThe Capacity Card adds more slots for items that use them. \n\nIf you add this to an Export Bus, an icon is added to select item priority.\n\n§6Crafting Card: §r\n\nThe Crafting Card allows you to automatically request autocrafting of items.\n\n§9In an ME Interface: §r\n\nIf you put in items to be stocked, if there aren't enough, it'll craft them until it reaches the selected amount. \n\nThese crafts are being stocked for recipes that the ME Interface has.\n\n[note]If you want them to be seen by the network, you'll need to put a storage bus on the ME Interface.[/note]\n\n§9In an ME Level Emitter: §r\n\n§aFirst Mode: §rIt'll emit a redstone signal while the specific item is being crafted.\n\n§aSecond Mode: §rIt will emit a redstone signal once a crafting job for the item has been requested, [warn]but it won't send the items to be crafted.[/warn] \n\nThis is useful if you're using a dummy pattern, and are using the level emitter to tell something else to happen. \n\nYou still need to get the item(s) requested back into the system so it doesn't tie up a crafting CPU though.\n\n§9In an ME Export Bus: §r\n\nIt'll attempt to send whatever item(s) are selected in the export bus' GUI.\n\n§aFirst Mode: §rIt'll send available items first, then create crafting jobs for the rest. \n\n§aSecond Mode: §rIt will only send crafted items.\n\n§6Acceleration Card: §r\n\nThe Acceleration Card makes the device/fixture work faster. \n\n[note]You'll probably want a lot of these.[/note]\n\n§6Inverter Card: §r\n\nThe Inverter Card allows you to invert the item filter of certain fixtures.\n\n§6Fuzzy Card: §r\n\nThe Fuzzy Card allows you to apply fuzzy logic to filtering to allow items with different NBT or damage data to be counted as the same. This is different from metadata. \n\nIf you just want it to be fuzzy for NBT, set to §9Match Any.§r \n\nIf it is set to §c99%§r, it will work on anything that is damaged. You can use the Inverter Card to reverse this.\n\nWhen used in an ME Interface, each fuzzy card (up to 3) will control 3 slots of the interface, from right to left. ",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Deck of Cards",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    183
  ],
  "rewards": [],
  "tasks": []
}
