tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__EnergyAcceptor-AAAAAAAAAAAAAAAAAAAIWA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2136,
  "prerequisites": [
    181
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Energy Acceptor is an alternative place to inject energy into your AE2 network. You can form a \"dumb\" network with just an EA, but for real capability, you'll want a Controller.\n\n[note]If you're making a subnet, just transfer power over with a Quartz Fiber.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Energy Acceptor",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    181
  ],
  "rewards": [],
  "tasks": []
}
