tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__EssentiaQuantumS-y9mYyyz4Qg6iGOYILdKA1A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3240412560558817492,
  "prerequisites": [
    2656,
    11439228378407189328
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Seems like you really want to swim in essentia?",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Essentia Quantum Storage",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2656,
    11439228378407189328
  ],
  "rewards": [],
  "tasks": []
}
